--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bams-admission-2025",
+  "homepage": "https://GKmaster-coder.github.io/BAMS-landing-page",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
