--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@tailwindcss/vite": "^4.1.7",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
+    "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.7"
   },
