--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
